split into components

--- a/ledWebController/src/app/app.component.html
+++ b/ledWebController/src/app/app.component.html
@@ -1,10 +1,2 @@
 <div class="title">LED Controller</div>
-<ul class="strip">
-  <li
-    class="led"
-    *ngFor="let led of data.leds"
-  >
-    {{ led.active }} {{led.color}}
-  </li>
-</ul>
-
+<app-strip [status]="data"></app-strip>
