--- a/ledWebController/src/app/app.component.html
+++ b/ledWebController/src/app/app.component.html
@@ -1,2 +1,3 @@
 <div class="title">LED Controller</div>
-<app-strip [status]="dataService.getStatus() | async "></app-strip>
+<app-strip [status]="dataService.getStatus() | async "
+(valueChange)="dataService.add($event)"></app-strip>
