show color on page

--- a/ledWebController/src/app/led/led.component.html
+++ b/ledWebController/src/app/led/led.component.html
@@ -1,5 +1,4 @@
 <div *ngIf="null != led"
-     style="background-color: deeppink; border: 1px solid forestgreen; display: inline-block; width: 20px; height: 20px; overflow: hidden">
-  #{{led.color | colorFormat}}
-  {{ led.active }} {{led.color}}
+     style="background-color:{{led.color | colorFormat}}; border: 1px solid forestgreen; display: inline-block; width: 20px; height: 20px; overflow: hidden">
+  {{ led.active }}
 </div>
