--- a/ledWebController/src/app/app.component.html
+++ b/ledWebController/src/app/app.component.html
@@ -1,3 +1,3 @@
 <div class="title">LED Controller</div>
 <app-strip [status]="dataService.getStatus() | async "
-(valueChange)="dataService.add($event)"></app-strip>
+(valueChange)="dataService.updateLeds($event)"></app-strip>
